// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> rendering renders correctly with language 1`] = `
<div
  className="tagline"
>
  <div
    className="tagline__item"
    title="Programming language / technologies"
  >
    python
  </div>
  <div
    className="tagline__item tagline__stargazers"
    title="Total stargazers"
  >
    <img
      alt="star"
      height="12"
      src="star_black.svg"
      width="12"
    />
    100
  </div>
  <div
    className="tagline__item"
    title="Forks"
  >
    <img
      alt="forks"
      height="12"
      src="fork.svg"
      width="12"
    />
    150
  </div>
</div>
`;

exports[`<Loader /> rendering renders correctly without language 1`] = `
<div
  className="tagline"
>
  <div
    className="tagline__item tagline__stargazers"
    title="Total stargazers"
  >
    <img
      alt="star"
      height="12"
      src="star_black.svg"
      width="12"
    />
    100
  </div>
  <div
    className="tagline__item"
    title="Forks"
  >
    <img
      alt="forks"
      height="12"
      src="fork.svg"
      width="12"
    />
    150
  </div>
</div>
`;
